Update with latest configuration tweaks
- README.md with instructions for configuration
- Bugfixes
- Add TLS reverse proxy

--- a/files/backgroundworker.service
+++ b/files/backgroundworker.service
@@ -8,6 +8,7 @@ Type=simple
 WorkingDirectory=/home/ubuntu/crates.io
 ExecStart=/home/ubuntu/.cargo/bin/cargo run --bin background-worker
 Restart=always
+RestartSec=3
 
 [Install]
 WantedBy=multi-user.target
