--- a/templates/site.conf
+++ b/templates/site.conf
@@ -19,19 +19,24 @@ server {
         proxy_redirect off;
     }
 
-        location /authorize/github {
-            proxy_pass_header Authorization;
-            proxy_pass http://$upstream;
-            proxy_set_header Host $host;
-            proxy_set_header X-Real-IP $remote_addr;
-            proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
-            proxy_http_version 1.1;
-            proxy_set_header Connection “”;
-            proxy_buffering off;
-            client_max_body_size 0;
-            proxy_read_timeout 36000s;
-            proxy_redirect off;
-        }
+    location /authorize/github {
+        proxy_pass_header Authorization;
+        proxy_pass http://$upstream;
+        proxy_set_header Host $host;
+        proxy_set_header X-Real-IP $remote_addr;
+        proxy_set_header X-Forwarded-For $proxy_add_x_forwarded_for;
+        proxy_http_version 1.1;
+        proxy_set_header Connection “”;
+        proxy_buffering off;
+        client_max_body_size 0;
+        proxy_read_timeout 36000s;
+        proxy_redirect off;
+    }
+
+    location / {
+        include /etc/nginx/mime.types;
+        try_files $uri $uri/ /index.html?/$request_uri;
+    }
 
     listen 80;
 
